# cerebro

./: .billing_export.env  .coverage  .env  .gitignore  .mcp.json  .sops.yaml  ADR_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_INTEGRATION.md  DASHBOARD_QUICK_SUMMARY.md  Justfile  PERFORMANCE_REPORT.md  PHASE1_IMPLEMENTATION.md  PHASE1_VALIDATION.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETE.md  README.md  cerebro  flake.nix  main.py  mkdocs.yml  phantom.py  pyproject.toml  start_cerebro.sh  test_command_modules.py  wrangler.toml
.github/: ci.yml  deploy-acr.yml  deploy-aks.yml  deploy.yml
.github/workflows/: validate.yml
dashboard/: .gitignore  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/dashboard/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/components/ui/: CommandPalette.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/pages/: Briefing.tsx  ControlPlane.tsx  Dashboard.tsx  Intelligence.tsx  Metrics.tsx  Projects.tsx  Settings.tsx
dashboard/src/types/: index.ts
docs/: INDEX.md  KEYBOARD_SHORTCUTS.md  README.md
docs/architecture/: ADR_SUMMARY.md
docs/commands/: README.md  cerebro_content.md  cerebro_gcp.md  cerebro_metrics.md  cerebro_setup.md  cerebro_strategy.md  cerebro_test.md
docs/features/gcp-credits/: AUTOMATION_SYSTEMS.md  CREDIT_BURNER_DETAILED.md  README.md  README_SPEEDRUN.md
docs/features/intelligence/: STACK_MASTERY.md
docs/guides/: AZURE_AKS_ACR_BOOTSTRAP.md  AZURE_PIPELINES_SOPS.md  CHEATSHEET.md  DASHBOARD_INTEGRATION.md  DASHBOARD_UI_UX_IMPROVEMENTS.md  GITLAB_CI_CD.md
docs/guides/runbooks/: azure_search.md  opensearch.md  pgvector.md  qdrant.md  weaviate.md
docs/phases/: ADR_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_ROADMAP.md  PHASE3_QUICK_START.md  PHASE3_STATUS.md  PHASE4_COMPLETE.md  QUICKSTART_PHASE1.md
docs/project/: FEATURE_MATRIX.md  PORTFOLIO_AUDIT.md  README_PORTFOLIO.md  RERANKER_INTEGRATION_PLAN.md  STATUS.md  TODO_PLAN.md
knowledge_base/: PROJECT_SUMMARY.txt
load-tests/: cerebro.jmx  config.yaml
nix/: cerebro.nix  module.nix
phantom/.archive/: README-old.md
phantom/core/extraction/: analyze_code.py
phantom/src/: Justfile
scripts/: README_ARSENAL.md  benchmark_tui.py  ci-test.sh  create_search_engine.py  generate_docs.py  index_repository.py  pipeline.sh  speedrun.sh  test_reranker.py  validate.sh  validate_metrics.sh
src/cerebro/: __init__.py  cli.py  dashboard_server.py  launcher.py  settings.py
src/cerebro/api/: __init__.py  server.py
src/cerebro/commands/: __init__.py  content.py  gcp.py  strategy.py  testing.py
src/cerebro/core/: __init__.py  analyzer.py  embedding_server.py  metadata.py  metrics_collector.py  rerank.py  rerank_client.py  watcher.py
src/cerebro/core/extraction/: analyze_code.py  generate_embeddings.py  ingest_data.py
src/cerebro/core/gcp/: __init__.py  auth.py  billing.py  datastores.py  dialogflow.py  search.py
src/cerebro/core/rag/: chunker.py  engine.py  orchestrator.py  retriever.py  server.py
src/cerebro/core/utils/: logging.py  resilience.py
src/cerebro/intelligence/: __init__.py  analyzer.py  briefing.py  collectors.py  core.py
src/cerebro/interfaces/: __init__.py  llm.py  vector_store.py
src/cerebro/modules/credit_burner/: __init__.py  audit.py  loadtest.py
src/cerebro/nats/: __init__.py  consumer.py  publisher.py
src/cerebro/providers/: __init__.py  llm_factory.py  vector_store_factory.py
src/cerebro/providers/anthropic/: __init__.py  llm.py
src/cerebro/providers/azure_search/: __init__.py  azure_search_vector_store.py
src/cerebro/providers/chroma/: chroma_vector_store.py
src/cerebro/providers/gcp/: __init__.py  vertex_ai_llm.py
src/cerebro/providers/gemini/: __init__.py  llm.py
src/cerebro/providers/groq/: __init__.py  llm.py
src/cerebro/providers/llamacpp/: llm.py
src/cerebro/providers/opensearch/: __init__.py  opensearch_vector_store.py
src/cerebro/providers/pgvector/: __init__.py  bootstrap.sql  pgvector_vector_store.py
src/cerebro/providers/weaviate/: __init__.py  weaviate_vector_store.py
src/cerebro/registry/: __init__.py  indexer.py  scanner.py
src/cerebro/tui/: app.py  performance.py  state.py
src/cerebro/tui/commands/: router.py
src/cerebro/tui/widgets/: __init__.py
src/phantom/: __init__.py  cli.py  dashboard_server.py  launcher.py
src/phantom/api/: server.py
src/phantom/commands/: __init__.py  content.py  gcp.py  metrics.py  strategy.py  testing.py
src/phantom/core/: __init__.py  analyzer.py  embedding_server.py  metrics_collector.py  rerank.py  rerank_client.py  watcher.py
src/phantom/core/extraction/: analyze_code.py  generate_embeddings.py  ingest_data.py
src/phantom/core/gcp/: dialogflow.py
src/phantom/core/rag/: engine.py  server.py
src/phantom/intelligence/: core.py
src/phantom/registry/: scanner.py
src/phantom/tui/: __init__.py  app.py  performance.py  state.py
src/phantom/tui/commands/: __init__.py  router.py
src/phantom/tui/screens/: __init__.py
src/phantom/tui/widgets/: __init__.py
tests/: debug_cli.py  test_analyzer.py  test_anthropic_provider.py  test_cli.py  test_dashboard_server.py  test_gemini_provider.py  test_groq_provider.py  test_intelligence.py  test_knowledge_indexer.py  test_launcher.py  test_metrics_collector.py  test_pgvector_provider.py  test_rag.py  test_rag_engine_new_providers.py  test_vector_store_factory.py
tests/integration/: test_vertex_limits.py  test_workflow.py
