[project]
name = "cerebro-cli"
version = "1.0.0b1"
description = "Cerebro - Enterprise Knowledge Extraction Platform"
authors = [{ name = "voidnxlabs", email = "sec@voidnxlabs.com" }]
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
phantom = "cerebro.launcher:main"
cerebro = "cerebro.launcher:main"

[tool.poetry]
name = "cerebro-cli"
version = "1.0.0b1"
description = "Cerebro - Enterprise Knowledge Extraction Platform"
authors = ["voidnxlabs <sec@voidnxlabs.com>"]
packages = [{ include = "cerebro", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
fastapi = "0.135.3"
uvicorn = "0.34.0"
chromadb = "0.5.23"
sentence-transformers = "3.4.1"
transformers = "4.48.3"
torch = "2.6.0"
accelerate = "1.12.0"
bitsandbytes = "0.45.2"
tree-sitter = "0.23.2"
tree-sitter-language-pack = "0.3.5"
gitpython = "3.1.46"
beautifulsoup4 = "4.13.3"
markdown = "3.7"
pygments = "2.19.1"
pydantic = "2.10.6"
typer = "0.15.1"
rich = "13.9.4"
tqdm = "4.67.1"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
langchain = ">=0.3.27,<2.0.0"
langchain-chroma = ">=0.1.4,<0.2.0"
langchain-community = ">=0.3.27,<2.0.0"
langchain-text-splitters = ">=0.3.6,<0.4.0"
click = "8.1.7"
textual = "0.79.1"
textual-dev = "1.5.1"
websockets = "13.0.1"
aiofiles = "23.2.1"
nats-py = "2.8.2"
dspy-ai = "3.1.3"
psycopg = "3.2.1"

[tool.poetry.group.gcp]
optional = true

[tool.poetry.group.gcp.dependencies]
google-cloud-discoveryengine = ">=0.16.0,<0.17.0"
google-cloud-storage = ">=3.7.0,<3.8.0"
google-cloud-aiplatform = ">=1.133.0,<1.134.0"
google-cloud-billing = ">=1.18.0,<1.19.0"
google-cloud-bigquery = ">=3.40.0,<3.41.0"
google-cloud-dialogflow-cx = ">=2.1.0,<2.2.0"
google-auth = "2.47.0"
langchain-google-vertexai = "3.2.0"

[tool.poetry.group.anthropic]
optional = true

[tool.poetry.group.anthropic.dependencies]
anthropic = "0.45.0"

[tool.poetry.group.groq]
optional = true

[tool.poetry.group.groq.dependencies]
groq = "0.18.0"

[tool.poetry.group.gemini]
optional = true

[tool.poetry.group.gemini.dependencies]
google-generativeai = "0.8.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "9.5.42"
mkdocs = "1.6.1"

[tool.poetry.group.azure]
optional = true

[tool.poetry.group.azure.dependencies]
langchain-openai = "0.2.14"

[tool.poetry.group.rag-pgvector]
optional = true

[tool.poetry.group.rag-pgvector.dependencies]
psycopg = ">=3.2,<4.0"

[tool.poetry.group.rag-qdrant]
optional = true

[tool.poetry.group.rag-qdrant.dependencies]
qdrant-client = ">=1.9,<2.0"

[tool.poetry.group.rag-opensearch]
optional = true

[tool.poetry.group.rag-opensearch.dependencies]
opensearch-py = ">=2.7,<3.0"

[tool.poetry.group.rag-azure-search]
optional = true

[tool.poetry.group.rag-azure-search.dependencies]
azure-search-documents = ">=11.6,<12.0"
azure-identity = ">=1.17,<2.0"

[tool.poetry.group.rag-weaviate]
optional = true

[tool.poetry.group.rag-weaviate.dependencies]
weaviate-client = ">=4.9,<5.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-asyncio = "0.25.3"
black = "25.1.0"
isort = "6.0.0"
ruff = "0.9.6"
mypy = "1.15.0"
types-pyyaml = "6.0.12.20241230"
types-requests = "2.32.0.20241016"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "agents", "data"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F841"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
